--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server": "imba -w src/server.imba",
     "tailwind-watch": "tailwindcss -i tailwind/app.css -o src/index.css --watch",
     "tailwind": "tailwindcss -i tailwind/app.css -o src/index.css",
-    "seed": "edgedb query --file=dbschema/seeds/initial.edgeql"
+    "seed": "edgedb query --file=dbschema/seeds/initial.edgeql",
+    "build": "npm run tailwind && imba build src/server.imba"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,8 @@
   "homepage": "https://github.com/haikyuu/perfect-stack#readme",
   "dependencies": {
     "@inertiajs/inertia": "^0.10.1",
+    "@types/express-session": "^1.17.4",
+    "@types/lodash": "^4.14.172",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "concurrently": "^6.2.1",
@@ -30,7 +33,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "imba": "^2.0.0-alpha.165",
-    "inertia-node": "^2.0.0"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.2",
