--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,31 +1,69 @@
-# This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Node.js CI
+name: Tests
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - ci
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  test:
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: ["14"]
+        os: [ubuntu-latest]
+        edgedb-version: ["stable"]
+
+        include:
+          - os: ubuntu-latest
+            node-version: "14"
+            edgedb-version: "nightly"
+          - os: macos-latest
+            node-version: "14"
+            edgedb-version: "stable"
+          # - os: windows-latest
+          #   node-version: "14"
+          #   edgedb-version: "stable"
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      # - name: Setup WSL
+      #   if: ${{ matrix.os == 'windows-latest' }}
+      #   uses: vampire/setup-wsl@v1
+      #   with:
+      #     wsl-shell-user: edgedb
+      #     additional-packages:
+      #       ca-certificates
+      #       curl
+
+      - uses: actions/checkout@v1
+        with:
+          fetch-depth: 50
+
+      - name: Set up Node ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      # - name: Set up Deno
+      #   uses: denoland/setup-deno@v1
+      #   with:
+      #     deno-version: v1.12.x
+
+      - name: Install EdgeDB
+        uses: edgedb/setup-edgedb@v1
+        with:
+          server-version: ${{ matrix.edgedb-version }}
+
+      - name: Install deps
+        run: |
+          npm ci
+      - name: Build the project
+        run: |
+          npm run Build
+      - name: Run Tests
+        run: |
+          npm run test
