remove macos tests

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -20,10 +20,10 @@ jobs:
         os: [ubuntu-latest]
         edgedb-version: ["stable"]
 
-        include:
-          - os: macos-latest
-            node-version: "14"
-            edgedb-version: "stable"
+        # include:
+        #   - os: macos-latest
+        #     node-version: "14"
+        #     edgedb-version: "stable"
           # - os: windows-latest
           #   node-version: "14"
           #   edgedb-version: "stable"
