--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,6 +1,5 @@
 name: Tests
 
-
 on:
   push:
     branches:
@@ -20,6 +19,11 @@ jobs:
         node-version: ["14"]
         os: [ubuntu-latest]
         edgedb-version: ["stable"]
+
+        include:
+          - os: macos-latest
+            node-version: "14"
+            edgedb-version: "stable"
 
     steps:
       - uses: actions/checkout@v1
